--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "SOBUB"
+name = "untitled"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rodio = "0.20.1"
+rodio = { version = "0.20.1", features = ["symphonia-aac"] }
+rand = "0.9.0"
